Bug 133455 - FILEOPEN: DOCX: Table has no borders
Summary: FILEOPEN: DOCX: Table has no borders
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.1.0 target:7.0.0.1
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2020-05-27 17:01 UTC by Xisco Faulí
Modified: 2020-12-04 18:40 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Comparison MSO 2010 and LibreOffice 7.0 master (320.83 KB, image/png)
2020-05-27 17:01 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2020-05-27 17:01:39 UTC
Created attachment 161348 [details]
Comparison MSO 2010 and LibreOffice 7.0 master

Steps to reproduce:
1. Open attachment 91943 [details] from bug 73550
2. Go to page 2

-> Table has no border around it. See comparison image

Reproduced in

Version: 7.0.0.0.alpha1+
Build ID: 82894d85147840f1f587e9530b12f0058f2ef2c3
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded


[Bug found by office-interoperability-tools]
Comment 1 Xisco Faulí 2020-05-27 17:02:54 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=8ffc1299ebf83450e67cf2a89304859e2558cd27

author	László Németh <nemeth@numbertext.org>	2020-01-27 12:14:52 +0100
committer	László Németh <nemeth@numbertext.org>	2020-01-27 17:06:53 +0100
commit 8ffc1299ebf83450e67cf2a89304859e2558cd27 (patch)
tree 6c5b1ec12afb43729d38c7bad99a9e945a049a3b
parent 2be03a8e8159165d6a2f911d0c94f55b3d9e41d4 (diff)
tdf#95033 DOCX import: apply tblPrEx table border

Bisected with: bibisect-linux64-6.5

Adding Cc: to László Németh
Comment 2 Commit Notification 2020-06-04 16:44:30 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/da8ea444b004a0be36964ae9a778f73e752b2673

tdf#133455 DOCX import: fix table border regression

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Xisco Faulí 2020-06-09 10:05:27 UTC
Verified in

Version: 7.1.0.0.alpha0+
Build ID: e0f058bcd5e185b89e4b7c680a7901bc7eb2a790
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

@László Németh, thanks for fixing this issue!
Comment 4 Commit Notification 2020-06-09 10:09:04 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/c043b589c4b185dc4f78e52ef16e2600c121decb

tdf#133455 DOCX import: fix table border regression

It will be available in 7.0.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.