tdf#133455 DOCX import: fix table border regression

caused by commit 8ffc1299ebf83450e67cf2a89304859e2558cd27
(tdf#95033 DOCX import: apply tblPrEx table border).

Change-Id: Ief4da3bce3282b5dab1ce4dabb4e075efcc1abaf
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/95504
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>
(cherry picked from commit 3593dd550882783b5f776262e928fc058c4dbd9d)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/95550
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>