writerfilter/source/dmapper/TablePropertiesHandler.hxx
@@ -74,6 +74,17 @@ private:
             m_pCurrentProperties->InsertProps(pProps.get());
     };
 
+    void tableExceptionProps( TablePropertyMapPtr pProps )
+    {
+        if ( m_pTableManager )
+        {
+            m_pTableManager->tableExceptionProps( pProps );
+            cellProps( pProps );
+        }
+        else
+            m_pCurrentProperties->InsertProps(pProps.get());
+    };
+
     void insertTableProps( TablePropertyMapPtr pProps )
     {
         if ( m_pTableManager )
